かるい修正

--- a/PanelSlider/sample.html
+++ b/PanelSlider/sample.html
@@ -85,7 +85,7 @@
 				        <img src="img/Usage2.png">
 				        <img src="img/Usage.png">
 				        <p>上のようにjsを読み込み、id,classを追加。viewが全体の画面、column-wrapperが縦移動、row-wrapperが横移動を行って、.pageの中身が見れるという仕組み<br><br>
-				        	<a href="#page-1-1">実際の動きを見てみる</a>
+				        	<a href="#page-1-1">実際の画面構成</a>
 				        	<a href="#page-0-2">*詳しい使い方</a>
 				        </p>
 
