--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>kuri9973</title>
+        <title>Rkuriyama</title>
     </head>
     <body>
-	<h1>kuri9973's works</h1>
+	<h1>Rkuriyama's works</h1>
 	<p>作成したjsなどのサンプルを公開しています</p>
 	<hr>
 	<ul>
-		<li><h2>PanelSlider</h2><p><a href="https://github.com/kuri9973/PanelSlider">github</a></p><p><a href="./PanelSlider/sample.html">sample</a></p>
+		<li>
+		    <h2>PanelSlider</h2>
+			<p><a href="https://github.com/Rkuriyama/PanelSlider">github</a></p>
+			<p><a href="./PanelSlider/sample.html">sample</a></p>
+		</li>
+		<li>
+		    <h2>SquidMap</h2>
+			<p><a href="https://github.com/Rkuriyama/SquidMap2">github</a></p>
+		</li>
+		<li>
+		    <h2>Real-time cerebellar scaffold model on GPU</h2>
+			<p><a href="https://github.com/Rkuriyama/Scaffold-Model-On-GPU">github</a></p>
+			<p><a href="https://www.frontiersin.org/articles/10.3389/fncel.2021.623552/abstract">(Kuriyama, et al., 2021)</a></p>
 		</li>
 	</ul>
     </body>
