--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<li>
 		    <h2>Real-time cerebellar scaffold model on GPU</h2>
 			<p><a href="https://github.com/Rkuriyama/Cerebellar-Scaffold-Model-Simulation-on-GPU">github</a></p>
-			<p><a href="https://www.frontiersin.org/articles/10.3389/fncel.2021.623552/abstract">(Kuriyama, et al., 2021)</a></p>
+			<p><a href="https://www.frontiersin.org/articles/10.3389/fncel.2021.623552/abstract">Real-time simulation of a cerebellar scaffold model on graphics processing units(Kuriyama, et al., 2021)</a></p>
 		</li>
 	</ul>
     </body>
