--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 	<ul>
 		<li>
 		    <h2>PanelSlider</h2>
+			<p>1ページ1枚として、ページをタイル状に構成し、スライド移動できるようにしたものと、その拡張jsたち。</p>
 			<p><a href="https://github.com/Rkuriyama/PanelSlider">github</a></p>
 			<p><a href="./PanelSlider/sample.html">sample</a></p>
 		</li>
 		<li>
 		    <h2>SquidMap</h2>
+			<p>Splatoon用のリアルタイムオンライン作戦ボード。Splatoon2への移行中に著作権問題に不安を感じて更新停止。</p>
 			<p><a href="https://github.com/Rkuriyama/SquidMap2">github</a></p>
 		</li>
 		<li>
 		    <h2>Real-time cerebellar scaffold model on GPU</h2>
+			<p>初めての研究と論文。</p>
 			<p><a href="https://github.com/Rkuriyama/Cerebellar-Scaffold-Model-Simulation-on-GPU">github</a></p>
-			<p><a href="https://www.frontiersin.org/articles/10.3389/fncel.2021.623552/abstract">Real-time simulation of a cerebellar scaffold model on graphics processing units(Kuriyama, et al., 2021)</a></p>
+			<p><a href="https://www.frontiersin.org/articles/10.3389/fncel.2021.623552/abstract">論文"Real-time simulation of a cerebellar scaffold model on graphics processing units" (Kuriyama, et al., 2021)</a></p>
+			<p><a href="https://www.frontiersin.org/articles/10.3389/fninf.2019.00037/full">先行研究 "Reconstruction and Simulation of a Scaffold Model of the Cerebellar Network" (Casalli, et al., 2019)</a></p>
 		</li>
 	</ul>
     </body>
