--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		    <h2>SquidMap</h2>
 			<p>Splatoon用のリアルタイムオンライン作戦ボード。Splatoon2への移行中に著作権問題に不安を感じて更新停止。</p>
 			<p><a href="https://github.com/Rkuriyama/SquidMap2">github</a></p>
+			<img src="./top-image.png" height="256">
 		</li>
 		<li>
 		    <h2>Real-time cerebellar scaffold model on GPU</h2>
