add squidmap2 demo movie

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			<p>Splatoon用のリアルタイムオンライン作戦ボード。Splatoon2への移行中に著作権問題に不安を感じて更新停止。</p>
 			<p><a href="https://github.com/Rkuriyama/SquidMap2">github</a></p>
 			<img src="./top-image.png" height="256">
+			<p>SquidMap2 demo</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/lXs9KboYVjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</li>
 		<li>
 		    <h2>Real-time cerebellar scaffold model on GPU</h2>
