--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		    <h2>PanelSlider</h2>
 			<p>1ページ1枚として、ページをタイル状に構成し、スライド移動できるようにしたものと、その拡張jsたち。</p>
 			<p><a href="https://github.com/Rkuriyama/PanelSlider">github</a></p>
-			<p><a href="./PanelSlider/sample.html">sample</a></p>
+			<p><a href="./PanelSlider/sample.html">sample page</a></p>
+			<p>Panel Slider demo</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/dr6eeobMIuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</li>
 		<li>
 		    <h2>SquidMap</h2>
