--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 			<p><a href="https://github.com/Rkuriyama/Cerebellar-Scaffold-Model-Simulation-on-GPU">github</a></p>
 			<p><a href="https://www.frontiersin.org/articles/10.3389/fncel.2021.623552/abstract">論文"Real-time simulation of a cerebellar scaffold model on graphics processing units" (Kuriyama, et al., 2021)</a></p>
 			<p><a href="https://www.frontiersin.org/articles/10.3389/fninf.2019.00037/full">先行研究 "Reconstruction and Simulation of a Scaffold Model of the Cerebellar Network" (Casalli, et al., 2019)</a></p>
+			
+			<h3>シミュレーション結果の可視化</h3>
+			<p>シミュレーションの出力データ(id, spike time)と細胞の座標 (id, vec3) を読み込んで実行。OpenGLを用いて制作。矢印キーでぐりぐり動かせる。
+			<br>シミュレーション時間のまま表示すると何もわからないので、1分程度に引き延ばした。最後数秒は適当なデータを与えて回路全体を見やすくしたもの。
+			</p>
+			<video src="./VisualizedDemo.mkv" controls></video>
+			<p><a href="https://github.com/Rkuriyama/3DVisualizationFromSpikeData">code (github)</a></p>
 		</li>
 	</ul>
     </body>
