Add Abstract of my paper

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/lXs9KboYVjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</li>
 		<li>
-		    <h2>Real-time cerebellar scaffold model on GPU</h2>
-			<p>初めての研究と論文。</p>
+		    <h2>GPUs accelerate cerebellar scaffold model</h2>
+			<p>初めての論文。先行研究(Casali, et al., 2019)が神経細胞の配置・接続・シミュレーションという3つのモジュールからなる神経細胞シミュレーションフレームワーク Scaffold Model を提案。
+				そのシミュレーション部をC言語とCUDAで実装し、GPU上でシミュレーションすることで高速化した。結果、100倍高速化され、約10万個の神経細胞で構成される小脳神経回路について、10秒分のシミュレーションが10秒以内に完了する実時間シミュレーションを達成した。</p>
+			
 			<p><a href="https://github.com/Rkuriyama/Cerebellar-Scaffold-Model-Simulation-on-GPU">github</a></p>
 			<p><a href="https://www.frontiersin.org/articles/10.3389/fncel.2021.623552/abstract">論文"Real-time simulation of a cerebellar scaffold model on graphics processing units" (Kuriyama, et al., 2021)</a></p>
 			<p><a href="https://www.frontiersin.org/articles/10.3389/fninf.2019.00037/full">先行研究 "Reconstruction and Simulation of a Scaffold Model of the Cerebellar Network" (Casalli, et al., 2019)</a></p>
