--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 			<p>音声認識完了してから単語をindexOfで検索、合致したものの中から一つ選んで表示する。現在は単語と説明が表示されるだけ。今後アニメーションや、OBS等での合成を見据えた背景色設定、枠色設定等を行えるようにしたい。</p>
 			<p>登録単語数が多くなった場合、検索にどれだけ時間がかかるのか不明。音声認識スピードや、特定単語の登録が出来るのかなどは調査対象。</p>
 			<p><a href="https://github.com/Rkuriyama/SpeechToPop-upWindow">github</a></p>
+			<ul>
+			    <li>HTML/CSS/JavaScript</li>
+			    <li>コンテンツ表示: Vue.js</li>
+			    <li>音声認識: Web Speech API</li>
+			</ul>
 			<h3>参考資料</h3>
 			<ul>
 			    <li><a href="https://developer.mozilla.org/ja/docs/Web/API/Web_Speech_API">Web Speech API - Web API | MDN</a></li>
